change mdx imports

--- a/src/content/once-ui/components/accordionGroup.mdx
+++ b/src/content/once-ui/components/accordionGroup.mdx
@@ -79,7 +79,7 @@ A container component that groups multiple Accordion components together with co
   marginBottom="16"
   data={{
     headers: [
-      { content: "Property", key: "property", sortable: true },
+      { content: "Prop", key: "prop", sortable: true },
       { content: "Type", key: "type" },
       { content: "Description", key: "description" }
     ],
